--- a/Sources/MagicCardTracker.Pwa/_Imports.razor
+++ b/Sources/MagicCardTracker.Pwa/_Imports.razor
@@ -9,5 +9,7 @@
 @using MagicCardTracker.Pwa
 @using MagicCardTracker.Pwa.Shared
 @using MagicCardTracker.Pwa.Components
+@using MagicCardTracker.Pwa.Dialogs
 @using MagicCardTracker.Pwa.Settings
+@using MagicCardTracker.Pwa.Services.Dialogs
 @using ChartJs.Blazor;
