--- a/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
+++ b/Sources/MagicCardTracker.Pwa/Shared/Footer.razor
@@ -1,20 +1,23 @@
 @inject InfoSettings _infoSettings;
 
-<div class="row">
-    <div class="col-12 col-md-8 offset-md-2">
-        <div class="text-center color-white-60 small content">
-            Magic Card Tracker is unofficial Fan Content permitted under the <a href="https://company.wizards.com/en/legal/fancontentpolicy" target="_blank">Fan Content Policy</a>. 
-            Not approved/endorsed by Wizards. 
-            Portions of the materials used are property of Wizards of the Coast. 
-            ©Wizards of the Coast LLC; Source of Magic Card Tracker ©Stefan Wilkes.
+<div class="mt-10 border-t-2 border-neutral-700 p-4">
+    <div class="mx-auto w-8/12 text-sm text-neutral-400">
+        <div class="block">
+            Magic Card Tracker is unofficial Fan Content permitted under the <a class="text-purple-400 hover:underline" href="https://company.wizards.com/en/legal/fancontentpolicy" target="_blank">Fan Content Policy</a>. 
+            Not approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast LLC. Magic: The Gathering® is a trademark of Wizards of the Coast.
+        </div>
+        <div class="mt-4">
+            Made with 💜 by Stefan Wilkes.
+        </div>
+        <div class="mt-4 flex gap-4">
+            <a class="text-purple-400 hover:underline" href="@_infoSettings.GitHubUrl" target="_blank"> GitHub </a>
+            <a class="text-purple-400 hover:underline" href="/privacy-policy">Privacy Policy</a>
+            <span>Version @(Version)</span>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-12">
-        <div class="content pt-0 small d-flex justify-content-between">
-            <a href="@_infoSettings.GitHubUrl" target="_blank"><i class="bi bi-github me-1"></i> Open Source </a>
-            <a href="/privacy-policy">Privacy Policy</a>
-        </div>
-    </div>
-</div>
+
+@code
+{
+    private string Version => GetType().Assembly.GetName()?.Version?.ToString(3)!;
+}
